tooling/nargo_cli/tests/snapshots/execution_failure/regression_10929/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion is always false: QPA
   ┌─ src/main.nr:6:9
   │  
 6 │ ╭         assert(
 7 │ │             (
 8 │ │                 if b {
 9 │ │                     // safety:
   · │
18 │ │             "QPA",
19 │ │         );
   │ ╰─────────' As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
   │  
   = Call stack:
     1: main
             at src/main.nr:6:9

Aborting due to 1 previous error
