tooling/nargo_cli/tests/snapshots/execution_failure/regression_10929/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: QPA
   ┌─ src/main.nr:6:9
   │  
 6 │ ╭         assert(
 7 │ │             (
 8 │ │                 if b {
 9 │ │                     // safety:
   · │
18 │ │             "QPA",
19 │ │         );
   │ ╰─────────'
   │  
   = Call stack:
     1: main
             at src/main.nr:6:9

Failed assertion
